--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,145 @@
-.color{
-    background-color:gray;
-    color: rgb(0, 0, 0);
+/* Reset styles */
+body, h1, h2, h3, p, ul, li {
+    margin: 0;
+    padding: 0;
 }
+
+/* Global styles */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #000000;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+header {
+    background-color: gray;
+    color: #fff;
+    padding: 20px 0;
+}
+
+header h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.hero {
+    background-image: url('travis-drake-hero.jpg');
+    background-size: cover;
+    color: #fff;
+    padding: 150px 0;
+    text-align: center;
+}
+
+.hero h2 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+.hero p {
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+
+.btn {
+    display: inline-block;
+    background-color: #FF4500;
+    color: #fff;
+    text-decoration: none;
+    padding: 15px 30px;
+    border-radius: 5px;
+    font-size: 20px;
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #FF6347;
+}
+
+.featured-artists {
+    background-color: #ffffff;
+    padding: 50px 0;
+}
+
+.featured-artists h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.artist {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.artist img {
+    width: 200px;
+    height: auto;
+    border-radius: 60%;
+    margin-bottom: 20px;
+}
+
+.artist h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.upcoming-events {
+    background-color: #f2f2f2;
+    padding: 50px 0;
+}
+
+.upcoming-events h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.event {
+    margin-bottom: 30px;
+}
+
+.event h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.music-player {
+    background-color: #fff;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.music-player h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
+
+footer p {
+    font-size: 16px;
+}
+
